--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>8.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.9</version>
+        </dependency>
+
 
 
     </dependencies>
